force-app/main/default/objects/sked__Recurring_Schedule__c/sked__Recurring_Schedule__c.object-meta.xml
<CustomObject>
    <description>header for recurring schedules</description>
    <label>Recurring Schedule</label>
    <nameField>
        <displayFormat>RS-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Schedules</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>