force-app/main/default/objects/sked__Recurring_Schedule__c/fields/sked__Ack_All_Jobs__c.field-meta.xml
<CustomField>
    <fullName>sked__Ack_All_Jobs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to force assigned resources to acknowledge all jobs in the series. Otherwise, acknowledging the first job in the series will auto acknowledge the rest.</description>
    <label>Acknowledge all jobs</label>
    <type>Checkbox</type>
</CustomField>