force-app/main/default/objects/sked__Recurring_Schedule__c/fields/sked__Description__c.field-meta.xml
<CustomField>
    <fullName>sked__Description__c</fullName>
    <description>short description of what the recurring schedule is for</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>