force-app/main/default/objects/sked__Recurring_Schedule__c/fields/sked__Summary__c.field-meta.xml
<CustomField>
    <fullName>sked__Summary__c</fullName>
    <description>auto generated summary the recurring schedule</description>
    <label>Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>