force-app/main/default/objects/sked__Recurring_Schedule__c/fields/sked_Availability_Count__c.field-meta.xml
<CustomField>
    <fullName>sked_Availability_Count__c</fullName>
    <label>Availability Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>