force-app/main/default/objects/sked__Recurring_Schedule__c/fields/sked_Skip_Holidays__c.field-meta.xml
<CustomField>
    <fullName>sked_Skip_Holidays__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Holidays</label>
    <type>Checkbox</type>
</CustomField>